--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,5 +10,8 @@
   <div class="ion-padding">
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-button size="large" (click)="openARCamera()">Launch AR</ion-button>
+    <ion-button size="large" (click)="openNormalCamera()">Launch Camera</ion-button>
+    
   </div>
 </ion-content>
