--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,9 @@
+page-home {
+    ion-content {
+        background-color: transparent !important;
+    }
+}
 
+ion-app,.nav-decor {
+    background-color: transparent !important;
+}
