--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,9 +1,3 @@
-page-home {
-    ion-content {
-        background-color: transparent !important;
-    }
-}
-
-ion-app,.nav-decor {
-    background-color: transparent !important;
-}
+ion-content {
+    --background: none transparent;
+  }
